--- a/SMQA Scientific Conference Project/.classpath
+++ b/SMQA Scientific Conference Project/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="lib" path="C:/Users/Manik/Downloads/activation-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="C:/Users/Manik/Downloads/mockito-all-1.10.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Manik/Downloads/randoop-4.3.2/randoop-4.3.2/randoop-all-4.3.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Manik/Downloads/javax.mail.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
